pdo_user_sql_tokenizer.c
/* Generated by re2c 0.10.2 on Sun May  7 16:23:38 2006 */
#line 1 "pdo_user_sql_tokenizer.re"
#include "php.h"
#include "php_pdo_user_sql.h"

static void php_pdo_user_unquote(php_pdo_user_sql_token *token)
{
	char *out = emalloc(token->token_len + 1), *p = out;
	int i;

	token->token_len--;
	for(i = 1; i < token->token_len; i++) {
		switch (token->token[i]) {
			case '\\':
				if ((i + 1) >= token->token_len) {
					/* EOL */
					*(p++) = '\\';
					goto done;
				}
				switch (token->token[++i]) {
					case 'r':	*(p++) = '\r';		goto next_iter;
					case 'n':	*(p++) = '\n';		goto next_iter;
					case 't':	*(p++) = '\t';		goto next_iter;
					case '\\':	*(p++) = '\\';		goto next_iter;
					case 'x':
					{
						unsigned char val = 0;

						if (++i >= token->token_len) {
							*(p++) = 'x';
							goto done;
						}
						if (token->token[i] >= '0' && token->token[i] <= '9') {
							val = token->token[i] - '0';
						} else if (token->token[i] >= 'A' && token->token[i] <= 'F') {
							val = 10 + token->token[i] - 'A';
						} else if (token->token[i] >= 'a' && token->token[i] <= 'f') {
							val = 10 + token->token[i] - 'a';
						} else {
							*(p++) = 'x';
							i--;
							goto next_iter;
						}
						if (++i >= token->token_len) {
							*(p++) = val;
							goto done;
						}
						if (token->token[i] >= '0' && token->token[i] <= '9') {
							val <<= 4;
							val |= token->token[i] - '0';
						} else if (token->token[i] >= 'A' && token->token[i] <= 'F') {
							val <<= 4;
							val |= 10 + token->token[i] - 'A';
						} else if (token->token[i] >= 'a' && token->token[i] <= 'f') {
							val <<= 4;
							val |= 10 + token->token[i] - 'a';
						} else {
							*(p++) = val;
							i--;
							goto next_iter;
						}
						*(p++) = val;
						goto next_iter;
					}
					default: /* local-quote, octal, and non-escaped */
					{
						unsigned char val = 0;

						if (token->token[i] >= '0' && token->token[i] <= '7') {
							val = token->token[i] - '0';
						} else {
							*(p++) = token->token[i];
							goto next_iter;
						}
						if (++i >= token->token_len) {
							*(p++) = val;
							goto done;
						}
						if (token->token[i] >= '0' && token->token[i] <= '7') {
							val <<= 3;
							val |= token->token[i] - '0';
						} else {
							*(p++) = val;
							i--;
							goto next_iter;
						}
						if (val > 0x1F) {
							*(p++) = val;
							goto next_iter;
						}
						if (++i >= token->token_len) {
							*(p++) = val;
							goto done;
						}
						if (token->token[i] >= '0' && token->token[i] <= '7') {
							val <<= 3;
							val |= token->token[i] - '0';
						} else {
							*(p++) = val;
							i--;
							goto next_iter;
						}
						*(p++) = val;
						goto next_iter;
					}
				}
			default:
				*(p++) = token->token[i];
		}
next_iter:
		continue; /* avoids warning */
	}

done:
	token->token = out;
	token->token_len = p - out;
	*p = 0;

	token->freeme = 1;
}

#define RET(num) { token->token_len = t->start - token->token; token->id = num; return (num); }
#define RET_UNESC(num) { token->token_len = t->start - token->token; token->id = num; php_pdo_user_unquote(token); return (num); }

#define YYCTYPE		char
#define YYCURSOR	(t->start)
#define YYLIMIT		(t->end)
#define YYFILL(n)
#define YYMARKER	marker

int php_pdo_user_sql_get_token(php_pdo_user_sql_tokenizer *t, php_pdo_user_sql_token *token)
{
	token->freeme = 0;
	token->token = t->start;
	char *marker = t->start;


#line 139 "<stdout>"
{
	YYCTYPE yych;

	if((YYLIMIT - YYCURSOR) < 15) YYFILL(15);
	yych = *YYCURSOR;
	switch(yych){
	case 0x00:	goto yy64;
	case 0x01:
	case 0x02:
	case 0x03:
	case 0x04:
	case 0x05:
	case 0x06:
	case 0x07:
	case 0x08:
	case 0x0B:
	case 0x0C:
	case 0x0E:
	case 0x0F:
	case 0x10:
	case 0x11:
	case 0x12:
	case 0x13:
	case 0x14:
	case 0x15:
	case 0x16:
	case 0x17:
	case 0x18:
	case 0x19:
	case 0x1A:
	case 0x1B:
	case 0x1C:
	case 0x1D:
	case 0x1E:
	case 0x1F:
	case '#':
	case '$':
	case '&':
	case '.':
	case ':':
	case '?':
	case '@':
	case '[':
	case '\\':
	case ']':
	case '^':
	case '{':
	case '|':
	case '}':
	case '~':
	case 0x7F:	goto yy2;
	case 0x09:
	case 0x0A:
	case 0x0D:
	case ' ':	goto yy56;
	case '!':	goto yy26;
	case '"':	goto yy52;
	case '%':	goto yy38;
	case '\'':	goto yy54;
	case '(':	goto yy40;
	case ')':	goto yy42;
	case '*':	goto yy34;
	case '+':	goto yy30;
	case ',':	goto yy44;
	case '-':	goto yy32;
	case '/':	goto yy36;
	case '0':	goto yy58;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy60;
	case ';':	goto yy48;
	case '<':	goto yy27;
	case '=':	goto yy46;
	case '>':	goto yy28;
	case 'A':
	case 'a':	goto yy12;
	case 'B':
	case 'b':	goto yy23;
	case 'C':
	case 'c':	goto yy10;
	case 'D':
	case 'd':	goto yy9;
	case 'E':
	case 'e':	goto yy25;
	case 'F':
	case 'f':	goto yy18;
	case 'G':
	case 'g':	goto yy13;
	case 'H':
	case 'h':	goto yy21;
	case 'I':
	case 'i':	goto yy7;
	case 'K':
	case 'k':	goto yy16;
	case 'L':
	case 'l':	goto yy20;
	case 'N':
	case 'n':	goto yy17;
	case 'O':
	case 'o':	goto yy22;
	case 'P':
	case 'p':	goto yy24;
	case 'R':
	case 'r':	goto yy11;
	case 'S':	goto yy3;
	case 'T':
	case 't':	goto yy14;
	case 'U':
	case 'u':	goto yy8;
	case 'V':
	case 'v':	goto yy15;
	case 'W':
	case 'w':	goto yy19;
	case 'X':
	case 'x':	goto yy29;
	case '`':	goto yy50;
	case 's':	goto yy5;
	default:	goto yy62;
	}
yy2:
	YYCURSOR = YYMARKER;
	goto yy59;
yy3:
	++YYCURSOR;
	switch((yych = *YYCURSOR)) {
	case 'E':
	case 'e':	goto yy343;
	default:	goto yy63;
	}
yy4:
#line 236 "pdo_user_sql_tokenizer.re"
	{ RET(PU_LABEL); }
#line 278 "<stdout>"
yy5:
	++YYCURSOR;
	switch((yych = *YYCURSOR)) {
	case 0x00:
	case 0x01:
	case 0x02:
	case 0x03:
	case 0x04:
	case 0x05:
	case 0x06:
	case 0x07:
	case 0x08:
	case 0x09:
	case 0x0A:
	case 0x0B:
	case 0x0C:
	case 0x0D:
	case 0x0E:
	case 0x0F:
	case 0x10:
	case 0x11:
	case 0x12:
	case 0x13:
	case 0x14:
	case 0x15:
	case 0x16:
	case 0x17:
	case 0x18:
	case 0x19:
	case 0x1A:
	case 0x1B:
	case 0x1C:
	case 0x1D:
	case 0x1E:
	case 0x1F:
	case ' ':
	case '!':
	case '"':
	case '#':
	case '$':
	case '%':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '/':
	case ':':
	case ';':
	case '<':
	case '=':
	case '>':
	case '?':
	case '@':
	case '[':
	case '\\':
	case ']':
	case '^':
	case '`':
	case '{':
	case '|':
	case '}':
	case '~':
	case 0x7F:	goto yy57;
	case 'E':
	case 'e':	goto yy343;
	case 's':	goto yy344;
	default:	goto yy62;
	}
yy6:
#line 233 "pdo_user_sql_tokenizer.re"
	{ RET(PU_WHITESPACE); }
#line 355 "<stdout>"
yy7:
	yych = *++YYCURSOR;
	switch(yych){
	case 'D':
	case 'd':	goto yy323;
	case 'N':
	case 'n':	goto yy324;
	default:	goto yy63;
	}
yy8:
	yych = *++YYCURSOR;
	switch(yych){
	case 'N':
	case 'n':	goto yy311;
	case 'P':
	case 'p':	goto yy312;
	default:	goto yy63;
	}
yy9:
	yych = *++YYCURSOR;
	switch(yych){
	case 'A':
	case 'a':	goto yy272;
	case 'E':
	case 'e':	goto yy273;
	case 'I':
	case 'i':	goto yy274;
	case 'O':
	case 'o':	goto yy275;
	case 'R':
	case 'r':	goto yy276;
	default:	goto yy63;
	}
yy10:
	yych = *++YYCURSOR;
	switch(yych){
	case 'H':
	case 'h':	goto yy256;
	case 'O':
	case 'o':	goto yy257;
	case 'R':
	case 'r':	goto yy258;
	default:	goto yy63;
	}
yy11:
	yych = *++YYCURSOR;
	switch(yych){
	case 'E':
	case 'e':	goto yy240;
	case 'L':
	case 'l':	goto yy241;
	default:	goto yy63;
	}
yy12:
	yych = *++YYCURSOR;
	switch(yych){
	case 'D':
	case 'd':	goto yy206;
	case 'F':
	case 'f':	goto yy207;
	case 'L':
	case 'l':	goto yy208;
	case 'N':
	case 'n':	goto yy209;
	case 'S':
	case 's':	goto yy210;
	case 'U':
	case 'u':	goto yy212;
	default:	goto yy63;
	}
yy13:
	yych = *++YYCURSOR;
	switch(yych){
	case 'R':
	case 'r':	goto yy197;
	default:	goto yy63;
	}
yy14:
	yych = *++YYCURSOR;
	switch(yych){
	case 'A':
	case 'a':	goto yy176;
	case 'E':
	case 'e':	goto yy177;
	case 'I':
	case 'i':	goto yy178;
	case 'O':
	case 'o':	goto yy179;
	default:	goto yy63;
	}
yy15:
	yych = *++YYCURSOR;
	switch(yych){
	case 'A':
	case 'a':	goto yy160;
	case 'I':
	case 'i':	goto yy161;
	default:	goto yy63;
	}
yy16:
	yych = *++YYCURSOR;
	switch(yych){
	case 'E':
	case 'e':	goto yy157;
	default:	goto yy63;
	}
yy17:
	yych = *++YYCURSOR;
	switch(yych){
	case 'O':
	case 'o':	goto yy150;
	case 'U':
	case 'u':	goto yy151;
	default:	goto yy63;
	}
yy18:
	yych = *++YYCURSOR;
	switch(yych){
	case 'L':
	case 'l':	goto yy141;
	case 'R':
	case 'r':	goto yy142;
	default:	goto yy63;
	}
yy19:
	yych = *++YYCURSOR;
	switch(yych){
	case 'H':
	case 'h':	goto yy136;
	default:	goto yy63;
	}
yy20:
	yych = *++YYCURSOR;
	switch(yych){
	case 'I':
	case 'i':	goto yy128;
	default:	goto yy63;
	}
yy21:
	yych = *++YYCURSOR;
	switch(yych){
	case 'A':
	case 'a':	goto yy122;
	default:	goto yy63;
	}
yy22:
	yych = *++YYCURSOR;
	switch(yych){
	case 'R':
	case 'r':	goto yy116;
	default:	goto yy63;
	}
yy23:
	yych = *++YYCURSOR;
	switch(yych){
	case 'E':
	case 'e':	goto yy101;
	case 'I':
	case 'i':	goto yy102;
	case 'L':
	case 'l':	goto yy103;
	case 'Y':
	case 'y':	goto yy104;
	default:	goto yy63;
	}
yy24:
	yych = *++YYCURSOR;
	switch(yych){
	case 'R':
	case 'r':	goto yy94;
	default:	goto yy63;
	}
yy25:
	yych = *++YYCURSOR;
	switch(yych){
	case 'N':
	case 'n':	goto yy90;
	default:	goto yy63;
	}
yy26:
	yych = *++YYCURSOR;
	switch(yych){
	case '=':	goto yy88;
	default:	goto yy2;
	}
yy27:
	yych = *++YYCURSOR;
	switch(yych){
	case '=':	goto yy84;
	case '>':	goto yy86;
	default:	goto yy2;
	}
yy28:
	yych = *++YYCURSOR;
	switch(yych){
	case '=':	goto yy82;
